# DellG5SE-Fan-Linux

./: DellFan  DellFan_2.cpp  DellFan_3.cpp  README.md
build-untitled-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  untitled
build-untitled-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-a79fe8488b6d05e6d335.json  cache-v2-ca80e461356fc05cc613.json  cmakeFiles-v1-29ecac56f8b8da0eec29.json  cmakeFiles-v1-4aeec3b5e176935f970e.json  cmakeFiles-v1-ea739b67290618c0bc3c.json  codemodel-v2-88f1bf14c665af2aa236.json  codemodel-v2-9f96e0fcfe39552b0c47.json  codemodel-v2-dcac24250a454a2a4aaf.json  index-2021-04-22T05-14-20-0360.json  index-2021-04-23T03-11-30-0247.json  index-2021-04-29T03-08-12-0013.json  target-untitled-Debug-6b44ce7c0834f10d05d0.json  target-untitled-Debug-9824736d023a22ff35d2.json  target-untitled-Debug-e87dfe227e098a48a675.json  target-untitled_autogen-Debug-88af859051c5933c98d8.json  target-untitled_autogen-Debug-d501c31df72512a233a1.json
build-untitled-Desktop-Debug/untitled_autogen/: mocs_compilation.cpp
build-untitled-Desktop-Debug/untitled_autogen/EWIEGA46WW/: moc_inputerror.cpp  moc_inputerror.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_task.cpp  moc_task.cpp.d
build-untitled-Desktop-Debug/untitled_autogen/include/: ui_inputerror.h  ui_mainwindow.h
untitled/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.3a4a452  CustomDial.cpp  CustomDial.h  g5se.cpp  g5se.h  inputerror.cpp  inputerror.h  inputerror.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp  task.h  untitled_en_US.ts
untitled/res/: res.qrc
untitled/res/themes/: SyNet.qss
